# nomrpg

./: CMakeLists.txt  README.md  compfile  index.html  params.json
app/: app_config.h.in  main.cpp
app/helpers/wt_related/: AppSession.cpp  AppSession.hpp  AppSessionInitializer.cpp  AppSessionInitializer.hpp  AppSessionUtils.cpp  AppSessionUtils.hpp  WtDboData.cpp  WtDboData.hpp
app/models/avatar/: Archetype.cpp  Archetype.hpp  ArchetypeGroup.cpp  ArchetypeGroup.hpp  Inventory.cpp  Inventory.hpp
app/models/base/: NamedPersistableObject.hpp  Object.cpp  Object.hpp  PersistableObject.cpp  (+1 more)
app/views/: AuthStateMachine.hpp
config/: AppStrings.xml  AppStrings_fr.xml  AppTemplates.xml  AppTemplates_fr.xml  AuthOriginal.xml  AuthOriginal_fr.xml  AuthOverride.xml  AuthOverride_fr.xml  TBRPGStrings.xml  TBRPGStrings_fr.xml  TBRPGTemplates.xml  TBRPGTemplates_fr.xml  example.xml
shared/Mok/: Assert.hpp  Exception.cpp  Exception.hpp
shared/off_spec/: off_spec.cpp  off_spec.hpp  off_spec_boost.cpp  off_spec_boost.hpp  off_spec_wt_model.cpp  off_spec_wt_model.hpp
shared/vpiotr-decimal_for_cpp/: vpiotr-decimal.h
spec/: Exception_spec.cpp  spec_check_launcher.cpp  spec_main.cpp
spec/views/: AuthStateMachine_spec.cpp
stash/: CMakeLists.txt  HTML_widgets.hpp  app_strings.xml  app_strings_fr.xml  boring_rpg_state_machine.hpp  game_start_spec.cpp  mok_orm.hpp  special-landing.css  stargate_panel_widget.hpp  update_includes.sh
stash/old/: TBRPG_strings_fr.xml  TBRPG_templates.xml  auth_fr.xml  strings.xml  strings_fr.xml  templates.xml  wt_config.xml
(+143 files in other folders)
